--- a/lib/views/error.erb
+++ b/lib/views/error.erb
@@ -1,4 +1,6 @@
-<h2>An error occurred</h2>
-<pre><%= @error %></pre><br />
-<p>Go back to <a href="/">main</a>.</p>
+<div class="description box">
+  <h2>An error occurred</h2>
+  <pre><%= @error %></pre><br />
+  <p>Go back to <a href="/">main</a>.</p>
+</div>
 
