--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,3 +1,5 @@
-Succesfully logged into CRNotes.
-Nothing to see here so far.
+Succesfully logged into CRNotes.<br />
+Unfortunately, something went wrong when loading the JavaScript user interface.
+
+<script type="text/javascript" src="js/crnotes.js"></script>
 
