--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -4,9 +4,7 @@
 <head>
   <title>CRNotes web interface</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.8rc1.custom.css" media="screen" />
-  <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
-  <script type="text/javascript" src="js/jquery-ui-1.8rc1.custom.min.js"></script>
+  <script type="text/javascript" src="js/require.js"></script>
 </head>
 <body>
   <div id="header">
