--- a/lib/views/login.erb
+++ b/lib/views/login.erb
@@ -1,4 +1,4 @@
-<div class="description ui-widget-content">
+<div class="description box">
   <p><b>CRNotes</b> is a simple web-based note-taking application.</p>
   <p class="ind">Free and Open Source</p>
   <p class="ind">Login with OpenID 2.0</p>
@@ -6,7 +6,7 @@
   <p class="ind">Managing multiple notes</p>
   <p class="ind">Deploy your own <a href="http://livoris.de/projects/crnotes">CRNotes Server</a></p>
 </div>
-<div class="login ui-widget-content">
+<div class="login box">
   <form action="login" method="post">
     <p><b>Log in with</b></p>
     <p class="ind">
