added delete button

--- a/lib/public/js/views/edit.ejs
+++ b/lib/public/js/views/edit.ejs
@@ -1,5 +1,8 @@
+<span id="status">Unmodified</span>
+<br />
 <textarea id="notetext" rows="30" cols="80">
 <%= note.text %>
-</textarea><br />
-<span id="status"></span>
+</textarea>
+<br />
+<button>Delete</button>
 
