fixed layout for the editing page

--- a/lib/public/js/views/edit.ejs
+++ b/lib/public/js/views/edit.ejs
@@ -1,8 +1,6 @@
-<span id="status">Unmodified</span>
+<h2><%= note.name %></h2>
 <br />
-<textarea id="notetext" rows="30" cols="80">
-<%= note.text %>
-</textarea>
+<textarea id="notetext" rows="30" cols="80"><%= note.text %></textarea>
 <br />
 <button>Delete</button>
-
+<span id="status">Unmodified</span>
